--- a/web/angular.json
+++ b/web/angular.json
@@ -1,12 +1,12 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
-    "analytics": "8df15027-7266-40e5-9855-fc7ed32c4f0d"
+    "analytics": "5c40c4b7-eb88-4437-b71c-2c854d5e47e2"
   },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "web": {
+    "OguruPro": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/web",
+            "outputPath": "dist/oguru-pro",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -30,7 +30,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss",
+             
+             "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
@@ -71,10 +73,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "web:build:production"
+              "browserTarget": "OguruPro:build:production"
             },
             "development": {
-              "browserTarget": "web:build:development"
+              "browserTarget": "OguruPro:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -82,7 +84,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "web:build"
+            "browserTarget": "OguruPro:build"
           }
         },
         "test": {
@@ -105,5 +107,5 @@
       }
     }
   },
-  "defaultProject": "web"
+  "defaultProject": "OguruPro"
 }
