--- a/server/package.json
+++ b/server/package.json
@@ -3,14 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "chalk": "^4.1.2",
     "cookie-parser": "^1.4.6",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.2",
     "express": "^4.16.4",
     "http-errors": "^1.6.3",
     "jade": "^1.11.0",
-    "morgan": "^1.9.1"
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "morgan": "^1.9.1",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.19",
+    "redis": "^4.3.1"
   }
 }
