--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^5.0.1",
     "chalk": "^4.1.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.2",
     "express": "^4.16.4",
