--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "angular-particle-updated": "^1.0.4-1",
     "bootstrap": "^5.2.1",
     "jquery": "^3.6.1",
+    "jwt-decode": "^3.1.2",
     "ng-particles": "^2.2.2",
     "ngx-toastr": "^14.3.0",
     "particlesjs": "^2.2.3",
