--- a/web/package.json
+++ b/web/package.json
@@ -17,15 +17,19 @@
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
     "@angular/forms": "~13.1.0",
+    "@angular/localize": "~13.1.0",
     "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@popperjs/core": "^2.10.2",
     "angular-particle": "^1.0.4",
     "angular-particle-updated": "^1.0.4-1",
     "bootstrap": "^5.2.1",
     "jquery": "^3.6.1",
     "jwt-decode": "^3.1.2",
+    "ng-circle-progress": "^1.6.0",
     "ng-particles": "^2.2.2",
     "ngx-toastr": "^14.3.0",
     "particlesjs": "^2.2.3",
