--- a/web/package.json
+++ b/web/package.json
@@ -29,8 +29,8 @@
     "bootstrap": "^5.2.1",
     "jquery": "^3.6.1",
     "jwt-decode": "^3.1.2",
-    "ng-circle-progress": "^1.6.0",
     "ng-particles": "^2.2.2",
+    "ngx-spinner": "^13.1.1",
     "ngx-toastr": "^14.3.0",
     "particlesjs": "^2.2.3",
     "popper.js": "^1.16.1",
