--- a/web/angular.json
+++ b/web/angular.json
@@ -31,7 +31,7 @@
             ],
             "styles": [
               "src/styles.scss",
-             
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
@@ -101,7 +101,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+               "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
             ],
             "scripts": []
           }
