--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.37",
     "morgan": "^1.9.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.19",
     "redis": "^4.3.1"
