--- a/web/package.json
+++ b/web/package.json
@@ -30,6 +30,7 @@
     "jquery": "^3.6.1",
     "jwt-decode": "^3.1.2",
     "ng-particles": "^2.2.2",
+    "ngx-mat-file-input": "^3.0.0-beta.0",
     "ngx-spinner": "^13.1.1",
     "ngx-toastr": "^14.3.0",
     "particlesjs": "^2.2.3",
