--- a/web/package.json
+++ b/web/package.json
@@ -30,12 +30,14 @@
     "jquery": "^3.6.1",
     "jwt-decode": "^3.1.2",
     "ng-particles": "^2.2.2",
+    "ngb-modal": "^2.0.3",
     "ngx-mat-file-input": "^3.0.0-beta.0",
     "ngx-spinner": "^13.1.1",
     "ngx-toastr": "^14.3.0",
     "particlesjs": "^2.2.3",
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
+    "sweetalert2": "^11.4.36",
     "tslib": "^2.3.0",
     "tsparticles": "^2.2.4",
     "tsparticles-engine": "^2.2.4",
