--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.19",
-    "redis": "^4.3.1"
+    "redis": "^4.3.1",
+    "winston": "^3.8.2",
+    "winston-mysql": "^1.1.1"
   }
 }
