--- a/web/package.json
+++ b/web/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^5.2.1",
     "file-saver": "^2.0.5",
     "jquery": "^3.6.1",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "ng-particles": "^2.2.2",
