--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,7 @@
     "angular-particle-updated": "^1.0.4-1",
     "bootstrap": "^5.2.1",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.6.1",
     "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
