--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "node-xlsx": "^0.21.0",
     "nodemon": "^2.0.19",
     "redis": "^4.3.1",
     "winston": "^3.8.2",
