--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.2",
+    "ejs": "^3.1.8",
     "express": "^4.16.4",
+    "html-pdf": "^3.0.1",
     "http-errors": "^1.6.3",
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
@@ -24,6 +26,7 @@
     "node-xlsx": "^0.21.0",
     "nodemon": "^2.0.19",
     "redis": "^4.3.1",
+    "tinyurl": "^1.1.7",
     "winston": "^3.8.2",
     "winston-mysql": "^1.1.1"
   }
