--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,10 @@
     "ejs": "^3.1.8",
     "express": "^4.16.4",
     "html-pdf": "^3.0.1",
+    "html2pdf.js": "^0.10.1",
     "http-errors": "^1.6.3",
     "jade": "^1.11.0",
+    "jsbarcode": "^3.11.5",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.37",
