--- a/web/package.json
+++ b/web/package.json
@@ -35,6 +35,7 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "ng-particles": "^2.2.2",
+    "ng2-search-filter": "^0.5.1",
     "ngb-modal": "^2.0.3",
     "ngx-mat-file-input": "^3.0.0-beta.0",
     "ngx-spinner": "^13.1.1",
