--- a/web/package.json
+++ b/web/package.json
@@ -52,8 +52,8 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.4",
-    "@angular/cli": "~13.1.4",
+    "@angular-devkit/build-angular": "^16.1.6",
+    "@angular/cli": "^16.1.6",
     "@angular/compiler-cli": "~13.1.0",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
