--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "angular-particle": "^1.0.4",
     "angular-particle-updated": "^1.0.4-1",
     "bootstrap": "^5.2.1",
+    "bootstrap-scss": "^5.3.0",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jquery": "^3.6.1",
@@ -38,7 +39,7 @@
     "ng2-search-filter": "^0.5.1",
     "ngb-modal": "^2.0.3",
     "ngx-mat-file-input": "^3.0.0-beta.0",
-    "ngx-print": "^1.2.1",
+    "ngx-print": "^1.3.1",
     "ngx-spinner": "^13.1.1",
     "ngx-toastr": "^17.0.2",
     "particlesjs": "^2.2.3",
