--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "mysql": "^2.18.1",
     "node-xlsx": "^0.21.0",
     "nodemon": "^2.0.19",
+    "pug": "^3.0.2",
     "redis": "^4.3.1",
     "tinyurl": "^1.1.7",
     "winston": "^3.8.2",
