--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "mysql2": "^3.6.0",
     "node-xlsx": "^0.21.0",
     "nodemon": "^2.0.19",
     "pug": "^3.0.2",
