--- a/web1/package.json
+++ b/web1/package.json
@@ -36,6 +36,7 @@
     "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "ng-particles": "^2.2.2",
     "ng2-search-filter": "^0.5.1",
     "ngb-modal": "^2.0.3",
