--- a/web1/package.json
+++ b/web1/package.json
@@ -41,6 +41,7 @@
     "ng2-search-filter": "^0.5.1",
     "ngb-modal": "^2.0.3",
     "ngx-mat-file-input": "^3.0.0-beta.0",
+    "ngx-mat-select-search": "^5.0.0",
     "ngx-print": "^1.2.1",
     "ngx-spinner": "^13.1.1",
     "ngx-toastr": "^14.3.0",
