--- a/web1/package.json
+++ b/web1/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "build-prod": "node --max_old_space_size=8000 ./node_modules/@angular/cli/bin/ng build  --output-path dist",
     "test": "ng test",
     "postinstall": "ngcc"
   },
