--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "pug": "^3.0.2",
     "redis": "^4.3.1",
     "tinyurl": "^1.1.7",
+    "twilio": "^4.19.0",
     "winston": "^3.8.2",
     "winston-mysql": "^1.1.1"
   }
