--- a/web1/package.json
+++ b/web1/package.json
@@ -18,7 +18,7 @@
     "@angular/cdk": "^13.3.9",
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
-    "@angular/core": "~13.1.0",
+    "@angular/core": "^13.1.0",
     "@angular/forms": "~13.1.0",
     "@angular/localize": "~13.1.0",
     "@angular/material": "^13.3.9",
@@ -70,6 +70,6 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.5.2"
+    "typescript": "^4.5.2"
   }
 }
