--- a/web1/package.json
+++ b/web1/package.json
@@ -34,6 +34,7 @@
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jquery": "^3.6.1",
+    "jsbarcode": "^3.11.6",
     "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
