--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.9",
+    "exceljs": "^4.3.0",
     "express": "^4.16.4",
     "html-pdf": "^3.0.1",
     "html2pdf.js": "^0.10.1",
