--- a/web1/package.json
+++ b/web1/package.json
@@ -41,6 +41,7 @@
     "moment-timezone": "^0.5.43",
     "ng-particles": "^2.2.2",
     "ng-tiny-url": "^1.0.2",
+    "ng2-pdf-viewer": "^9.0.0",
     "ng2-search-filter": "^0.5.1",
     "ngb-modal": "^2.0.3",
     "ngx-mat-file-input": "^3.0.0-beta.0",
