--- a/server/package.json
+++ b/server/package.json
@@ -33,8 +33,11 @@
     "node-cron": "^3.0.2",
     "node-xlsx": "^0.21.0",
     "nodemon": "^2.0.19",
+    "pdf-lib": "^1.17.1",
     "pm2": "^5.4.2",
     "pug": "^3.0.2",
+    "puppeteer": "^10.4.0",
+    "puppeteer-core": "^22.14.0",
     "redis": "^4.3.1",
     "tinyurl": "^1.1.7",
     "twilio": "^4.19.0",
