--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "node-cron": "^3.0.2",
     "node-xlsx": "^0.21.0",
     "nodemon": "^2.0.19",
+    "number-to-words": "^1.2.4",
     "pdf-lib": "^1.17.1",
     "pm2": "^5.4.2",
     "pug": "^3.0.2",
