--- a/web1/package.json
+++ b/web1/package.json
@@ -50,6 +50,7 @@
     "ngx-spinner": "^13.1.1",
     "ngx-toastr": "^14.3.0",
     "particlesjs": "^2.2.3",
+    "pdfjs-dist": "^2.10.377",
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
     "sweetalert2": "^11.4.36",
