--- a/web1/package.json
+++ b/web1/package.json
@@ -31,6 +31,7 @@
     "angular-particle": "^1.0.4",
     "angular-particle-updated": "^1.0.4-1",
     "bootstrap": "^5.2.1",
+    "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jquery": "^3.6.1",
@@ -53,6 +54,7 @@
     "pdfjs-dist": "^2.10.377",
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
+    "stream-browserify": "^3.0.0",
     "sweetalert2": "^11.4.36",
     "tslib": "^2.3.0",
     "tsparticles": "^2.2.4",
