--- a/web1/package.json
+++ b/web1/package.json
@@ -45,6 +45,7 @@
     "ng2-pdf-viewer": "^9.0.0",
     "ng2-search-filter": "^0.5.1",
     "ngb-modal": "^2.0.3",
+    "ngx-barcode-scanner": "^13.0.0",
     "ngx-mat-file-input": "^3.0.0-beta.0",
     "ngx-mat-select-search": "^5.0.0",
     "ngx-print": "^1.2.1",
