--- a/sperated_db_api/package.json
+++ b/sperated_db_api/package.json
@@ -32,6 +32,7 @@
     "mysql2": "^3.6.0",
     "node-cron": "^3.0.2",
     "node-xlsx": "^0.21.0",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.19",
     "number-to-words": "^1.2.4",
     "pdf-lib": "^1.17.1",
