--- a/relinksys/web/package.json
+++ b/relinksys/web/package.json
@@ -30,7 +30,9 @@
     "@popperjs/core": "^2.10.2",
     "angular-particle": "^1.0.4",
     "angular-particle-updated": "^1.0.4-1",
+    "apexcharts": "^4.7.0",
     "bootstrap": "^5.2.1",
+    "echarts": "^5.4.3",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
@@ -40,6 +42,7 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
+    "ng-apexcharts": "^1.15.0",
     "ng-particles": "^2.2.2",
     "ng-tiny-url": "^1.0.2",
     "ng2-google-charts": "^7.0.0",
@@ -47,11 +50,12 @@
     "ng2-search-filter": "^0.5.1",
     "ngb-modal": "^2.0.3",
     "ngx-barcode-scanner": "^13.0.0",
+    "ngx-echarts": "^8.0.1",
     "ngx-mat-file-input": "^3.0.0-beta.0",
     "ngx-mat-select-search": "^5.0.0",
     "ngx-print": "^1.2.1",
     "ngx-spinner": "^13.1.1",
-    "ngx-toastr": "^14.3.0",
+    "ngx-toastr": "^13.0.0",
     "particlesjs": "^2.2.3",
     "pdfjs-dist": "^2.10.377",
     "popper.js": "^1.16.1",
