--- a/garment/web/package.json
+++ b/garment/web/package.json
@@ -31,6 +31,7 @@
     "angular-particle": "^1.0.4",
     "angular-particle-updated": "^1.0.4-1",
     "bootstrap": "^5.2.1",
+    "echarts": "^5.4.3",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
@@ -47,6 +48,7 @@
     "ng2-search-filter": "^0.5.1",
     "ngb-modal": "^2.0.3",
     "ngx-barcode-scanner": "^13.0.0",
+    "ngx-echarts": "^8.0.1",
     "ngx-mat-file-input": "^3.0.0-beta.0",
     "ngx-mat-select-search": "^5.0.0",
     "ngx-print": "^1.2.1",
