--- a/relinksys/api/package.json
+++ b/relinksys/api/package.json
@@ -9,6 +9,7 @@
     "log": "pm2 logs"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "bcrypt": "^5.0.1",
     "chalk": "^4.1.2",
     "cookie-parser": "^1.4.6",
