--- a/relinksys/web/package.json
+++ b/relinksys/web/package.json
@@ -31,6 +31,7 @@
     "angular-particle": "^1.0.4",
     "angular-particle-updated": "^1.0.4-1",
     "apexcharts": "^4.7.0",
+    "axios": "^1.10.0",
     "bootstrap": "^5.2.1",
     "echarts": "^5.4.3",
     "exceljs": "^4.4.0",
@@ -38,7 +39,8 @@
     "html2canvas": "^1.4.1",
     "jquery": "^3.6.1",
     "jsbarcode": "^3.11.6",
-    "jspdf": "^2.5.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
