--- a/relinksys/api/package.json
+++ b/relinksys/api/package.json
@@ -23,6 +23,7 @@
     "html2pdf.js": "^0.10.1",
     "http-errors": "^1.6.3",
     "jade": "^1.11.0",
+    "joi": "^17.13.3",
     "jsbarcode": "^3.11.5",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
